# SAMP-Gamemode

./: .gitattributes  .gitignore  README.md  pawn.json
gamemodes/: new.pwn
source/: CCore.cpp  CMakeLists.txt  CMakeSettings.json  config.h  main.cpp  plugin.def
source/includes/mysqlcppconn/lib/: libeay32.lib  mysqlcppconn.lib  ssleay32.lib
source/src/: CCore.cpp  CCore.h  CLog.cpp  CLog.h  CPlayer.cpp  CPlayer.h  main.cpp
src/: CCore.h  CMakeLists.txt  config.h  main.cpp  plugin.def
